# sopel-wasi-cpython

./: Cargo.toml  LICENSE  README.md  pyproject.toml
python/sopel_wasi_cpython/: __init__.py  run.py  transform.py
python/sopel_wasi_cpython/CPython-WASI/lib.wasi-wasm32-3.13/: _sysconfigdata__wasi_wasm32-wasi.py
rust/: wasm_host.rs
